--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -39,10 +39,23 @@
 
     </RelativeLayout>
 
+    <ImageButton
+        android:id="@+id/imgbtn_changetoobject"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="530dp"
+        android:padding="0dp"
+        android:background="#00ff0000"
+        android:src="@drawable/imgbtn_changetoobject"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="79dp"
+        tools:layout_editor_absoluteY="456dp" />
+
     <include
         android:id="@+id/bottom_sheet_layout"
         layout="@layout/layout_bottom_sheet"
-        android:visibility="visible"/>
+        android:visibility="invisible"/>
 
     <FrameLayout
         android:id="@+id/container"
@@ -51,4 +64,6 @@
         app:layout_anchor="@+id/relativeLayout"
         app:layout_anchorGravity="center"
         tools:context="org.tensorflow.demo.CameraActivity" />
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
