--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -17,53 +17,59 @@
         android:id="@+id/imgbtn_pathstd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="80dp"
         android:padding="0dp"
         android:src="@drawable/imgbtn_pathstd_n"
-        android:background="#00ff0000"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="79dp"
-        tools:layout_editor_absoluteY="456dp" />
+        tools:layout_editor_absoluteY="456dp"
+        android:clickable="true"
+        android:background="?attr/selectableItemBackground"
+        />
 
     <ImageButton
         android:id="@+id/imgbtn_pathsel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="223dp"
+        android:layout_marginTop="295dp"
         android:padding="0dp"
-        android:background="#00ff0000"
         android:src="@drawable/imgbtn_pathsel_n"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="79dp"
-        tools:layout_editor_absoluteY="456dp" />
+        tools:layout_editor_absoluteY="456dp"
+        android:clickable="true"
+        android:background="?attr/selectableItemBackground"
+
+        />
 
     <ImageButton
         android:id="@+id/imgbtn_pathsave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="325dp"
+        android:layout_marginTop="295dp"
         android:background="#00ff0000"
         android:padding="0dp"
         android:src="@drawable/imgbtn_pathsave_n"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="79dp"
-        tools:layout_editor_absoluteY="456dp" />
+        tools:layout_editor_absoluteY="456dp"
+        android:visibility="invisible"/>
 
     <ImageButton
         android:id="@+id/imgbtn_voice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
-        android:layout_marginTop="530dp"
+        android:layout_marginTop="514dp"
         android:padding="0dp"
-        android:background="#00ff0000"
         android:src="@drawable/imgbtn_voice"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="79dp"
-        tools:layout_editor_absoluteY="456dp" />
+        tools:layout_editor_absoluteY="456dp"
+        android:clickable="true"
+        android:background="?attr/selectableItemBackground"/>
 
     <EditText
         android:id="@+id/Menu_select"
