Modify object recognition algorithms and create final prototypes

--- a/app/src/main/res/layout/test_activity_camera.xml
+++ b/app/src/main/res/layout/test_activity_camera.xml
@@ -40,7 +40,7 @@
     </RelativeLayout>
 
     <ImageButton
-        android:id="@+id/imgbtn_changetoobject"
+        android:id="@+id/imgbtn_changetoroad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
